--- a/templates/admin/admin_events/index.html.twig
+++ b/templates/admin/admin_events/index.html.twig
@@ -30,7 +30,6 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>Média</th>
-                <th>Slug</th>
                 <th>Statut</th>
                 <th>Publié le</th>
                 <th>Modifié le</th>
@@ -41,18 +40,19 @@
         {% for event in events %}
             <tr>
                 <td>{{ event.id }}</td>
-                <td>{{ event.name }}</td>
+                <td>{{ event.name|u.truncate(60, '...') }}</td>
                 <td>
                     {% if event.imageName %}
                         <img src="{{ vich_uploader_asset(event) | imagine_filter('midle_avatar') }}">
                     {% endif %}
                 </td>
-                <td>{{ event.slug }}</td>
-                <td><span class="badge badge-pill badge-{{ event.online ? 'success' : 'secondary' }}">{{ event.online ? 'Public' : 'Privé' }}</span></td>
+                <td><span class="badge badge-pill badge-{{ event.online ? 'success' : 'light' }}">{{ event.online ? 'En ligne' : 'Hors ligne' }}</span></td>
                 <td>{{ event.created ? event.created|date('d/m/Y') : '' }}</td>
                 <td>{{ event.updated ? event.updated|date('d/m/Y') : '' }}</td>
                 <td>
                     <a href="{{ path('admin_events_edit', {'id': event.id}) }}" class="btn btn-primary">Modifier</a>
+
+                    {% include "admin/admin_events/_delete_form.html.twig" %}
                 </td>
             </tr>
         {% else %}
