--- a/templates/admin/admin_posts/index.html.twig
+++ b/templates/admin/admin_posts/index.html.twig
@@ -30,7 +30,6 @@
             <tr>
                 <th>Id</th>
                 <th>Titre</th>
-                <th>Slug</th>
                 <th>Média</th>
                 <th>Statut</th>
                 <th>Crée le</th>
@@ -42,18 +41,23 @@
             {% for post in posts %}
             <tr>
                 <td>{{ post.id }}</td>
-                <td>{{ post.name }}</td>
-                <td>{{ post.slug }}</td>
+                <td>{{ post.name|u.truncate(60, '...') }}</td>
                 <td>
                     {% if post.imageName %}
                         <img src="{{ vich_uploader_asset(post) | imagine_filter('midle_avatar') }}">
                     {% endif %}
                 </td>
-                <td><span class="badge badge-pill badge-{{ post.online ? 'success' : 'secondary' }}">{{ post.online ? 'Public' : 'Privé' }}</span></td>
+                <td>
+                    <span class="badge badge-pill badge-{{ post.online ? 'success' : 'light' }}">
+                        {{ post.online ? 'En ligne' : 'Hors ligne' }}
+                    </span>
+                </td>
                 <td>{{ post.created ? post.created|date('d/m/Y') : '' }}</td>
                 <td>{{ post.updated ? post.updated|date('d/m/Y') : '' }}</td>
                 <td>
                     <a href="{{ path('admin_posts_edit', {'id': post.id}) }}" class="btn btn-primary">Modifier</a>
+
+                    {% include "admin/admin_posts/_delete_form.html.twig" %}
                 </td>
             </tr>
             {% else %}
