--- a/templates/admin/admin_questionnaires/_delete_form.html.twig
+++ b/templates/admin/admin_questionnaires/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('admin_questionnaires_delete', {'id': questionnaire.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" class="d-inline" action="{{ path('admin_questionnaires_delete', {'id': questionnaire.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ questionnaire.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer</button>
 </form>
